updated overflow on header to fix width issue

--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,8 @@ body {
 
 .header {
     height: 95vh;
+    width: 100vw;
+    overflow: hidden;
     background-image: linear-gradient( 
         to bottom right, 
         rgba(60, 28, 204, 0.6), 
